<resources>
    <string name="app_name">Mascotas</string>
    <string name="nombreEj">El pepe</string>
    <string name="imagen_perro">Imagen de un perro</string>
    <string name="imagen_hueso">Imagen de un hueso</string>
    <string name="imagen_huesoGold">Imagen de un hueso dorado</string>
    <string name="ejemplo_rating">5</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">About</string>
    <string name="rating">Rating</string>
    <string name="activity2_title">Mascotas gustadas</string>
    <string name="mensaje_snackbar">Te ha gustado esta mascota</string>

</resources>