<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/acitivty_vertical_margin"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardBackgroundColor="?attr/colorSurface"
    >


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="246dp"
        android:layout_height="143dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        android:contentDescription="@string/imagen_perro"
        android:src="@drawable/mascotaejemplo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgHueso"
        android:layout_width="@dimen/anchura_hueso"
        android:layout_height="@dimen/altura_hueso"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/imagen_hueso"
        android:src="@drawable/hueso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="like"
        />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="232dp"
        android:text="@string/nombreEj"
        android:textSize="@dimen/texto_nombre_rating"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFoto" />

    <ImageView
        android:id="@+id/imgHuesoGold"
        android:layout_width="@dimen/anchura_hueso"
        android:layout_height="@dimen/altura_hueso"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/imagen_huesoGold"
        android:src="@drawable/huesogold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/txtRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:text="@string/ejemplo_rating"
        android:textSize="@dimen/texto_nombre_rating"
        app:layout_constraintStart_toEndOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/imgFoto" />


</androidx.constraintlayout.widget.ConstraintLayout>




</com.google.android.material.card.MaterialCardView>